--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "redux": "^3.7.2",
     "request": "^2.81.0",
     "webpack": "^3.5.5"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.24.1"
   }
 }
